# flu

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/flu-cli/: Cargo.toml
crates/flu-cli/src/: cache.rs  codegen.rs  compile.rs  error.rs  main.rs
crates/flu-cli/tests/: integration_test.rs
crates/flu-core/: Cargo.toml
crates/flu-core/src/: fluent.rs  lib.rs  selection.rs  terminal.rs  transformation.rs
crates/flu-core/tests/: grouping_tests.rs  joins_tests.rs  selection_tests.rs  terminal_tests.rs  transformation_tests.rs
crates/flu-prelude/: Cargo.toml
crates/flu-prelude/src/: lib.rs
crates/lob-cli/: Cargo.toml  build.rs
crates/lob-cli/src/: cache.rs  codegen.rs  compile.rs  error.rs  input.rs  main.rs  output.rs  suggestion.rs  toolchain.rs  welcome.rs
crates/lob-cli/tests/: cli_test.rs
crates/lob-core/src/: fluent.rs  grouping.rs  joins.rs  lib.rs
docs/: index.md
docs/api/: overview.md
docs/examples/: logs.md
docs/guide/: cli.md  installation.md  quickstart.md
scripts/: setup-hooks.sh
