[workspace]
resolver = "2"
members = [
    "crates/flu-cli",
    "crates/flu-core",
    "crates/flu-prelude",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["flu contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/flu"

[workspace.dependencies]
flu-core = { path = "crates/flu-core" }
flu-prelude = { path = "crates/flu-prelude" }

# Core dependencies
itertools = "0.12"
anyhow = "1.0"
thiserror = "1.0"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
dirs = "5.0"
tar = "0.4"
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Build dependencies
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }

# Dev dependencies
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
uninlined_format_args = "allow"
stable_sort_primitive = "allow"
unnecessary_debug_formatting = "allow"
cast_precision_loss = "allow"
missing_const_for_fn = "allow"
unnecessary_wraps = "allow"
format_push_string = "allow"
nonminimal_bool = "allow"
to_string_in_format_args = "allow"
redundant_closure_for_method_calls = "allow"
struct_excessive_bools = "allow"
deprecated = "allow"
if_not_else = "allow"
literal_string_with_formatting_args = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
